--- a/tobeIgnored/ignoreme.html
+++ b/tobeIgnored/ignoreme.html
@@ -4,20 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>m2</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Document 1</h1>
-    <h2>f1</h2>
-    <h2>f2</h2>
-    <h2>m3</h2>
-
-    <h3>m4</h3>
-    <h2>g1</h2>
-    <h2>g2</h2>
-
-    <h2>m5</h2>
-
-    <h2>a1</h2>
+    <h1>IGNORE</h1>
 </body>
 </html>
